# Flight-Fare-Prediction-for-US-Domestic-Airlines

./: README.md  pyproject.toml  setup.py
docs/: conf.py
models/: Drishya_Chuke_25076922_lightgbm.pkl  Kevin_Cherian_24583890_adaboost.pkl  Shuohua_Li_12961912_xgb.pkl  adaboost_default.joblib  baseline_scaler.joblib  lightgbm_default.joblib  lightgbm_model.pkl  xgb_model.pkl
notebooks/: Baseline.ipynb  Chunkin proceed data.ipynb  Data preparation.ipynb  Drishya_Chuke_25076922_lgbm.ipynb  EDA.ipynb  Kevin_Cherian_AdaBoost_24583890.ipynb  Nahid_Kamal_Random_Forest_10914036.ipynb  lgmBoost.ipynb  li_shuohua_12961912_xgboost.ipynb
notebooks/Data Ingestion Sorting And Preparation/: Data Preparation.ipynb  EDA.ipynb  Sorting and merging dataset(individual).ipynb
notebooks/Drishya_Chuke_25076922/: adaboost.ipynb  lgmBoost.ipynb
reports/li_shuohua_12961912/Data Prep/: prep_all.ipynb  prep_reg.ipynb
reports/li_shuohua_12961912/Data process/: data process.ipynb  data_process_reg.ipynb
reports/li_shuohua_12961912/Data understanding/: Data_analysis.ipynb  Data_understanding.ipynb  stuff  to rember.ipynb
reports/li_shuohua_12961912/Model/: KNN_1.ipynb  KNN_initial.ipynb  Xgboost_init.ipynb  xgboost_all.ipynb
